--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,28 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.blue {
+  color: cornflowerblue;
+}
+
+.red {
+  color: crimson;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 24px;
+  padding: 10px 0;
+}
+
+th, td {
+  padding: 0 5px;
+}
+
+.primaryButton{
+  padding: 2px 5px;
+  margin: 2px 5px;
+  border: 1px solid white;
+  border-radius: 2px;
+}
